<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/categories"
            android:title="@string/categories"
            android:icon="@drawable/categories"/>
        <item
            android:id="@+id/goods"
            android:title="@string/goods"
            android:icon="@drawable/goods"/>
        <item
            android:id="@+id/card"
            android:title="@string/basket"
            android:icon="@drawable/card"/>
        <item
            android:id="@+id/sales"
            android:title="@string/sales"
            android:icon="@drawable/sale"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/about_us"
                android:title="@string/about_us"
                android:icon="@drawable/about_us"/>
            <item
                android:id="@+id/exit"
                android:title="@string/exit"
                android:icon="@drawable/exit"/>
        </menu>
    </item>

</menu>
