<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/addCatLL"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <EditText
        android:id="@+id/goodAddName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="6dp"
        android:hint="@string/good_name"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:id="@+id/goodAddCat"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="6dp"
        android:hint="@string/cat_name_for_good"
        android:layout_gravity="center_horizontal"/>
    <EditText
        android:id="@+id/goodAddColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="6dp"
        android:hint="@string/good_color"
        android:layout_gravity="center_horizontal"/>
    <EditText
        android:id="@+id/goodAddSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="6dp"
        android:hint="@string/good_sex"
        android:layout_gravity="center_horizontal"/>
    <EditText
        android:id="@+id/goodAddFirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="6dp"
        android:hint="@string/good_firm"
        android:layout_gravity="center_horizontal"/>
    <EditText
        android:id="@+id/goodAddQuantity"
        android:inputType="number"
        android:maxLength="4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="6dp"
        android:hint="@string/good_quantity"
        android:layout_gravity="center_horizontal"/>
    <EditText
        android:id="@+id/goodAddPrice"
        android:inputType="numberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="6dp"
        android:hint="@string/good_price"
        android:layout_gravity="center_horizontal"/>
    <EditText
        android:id="@+id/goodAddImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="6dp"
        android:hint="@string/good_img"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>